--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   
   <body>
-    <p>Here is Scott's resume</p>
+    <p><a href="basic.html>Basic Resume</a></p>
     <p>Make some changes!</p>
   </body>
 </html>
