--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   
   <body>
     <p><a href="basic.html">Basic Resume</a></p>
-    <p>Make some changes!</p>
+    <p><a href="basic.html">Advanced Resume</a></p>
   </body>
 </html>
