--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </head>
   
   <body>
-    <p><a href="basic.html">Basic Resume</a></p>
-    <p><a href="advanced.html">Advanced Resume</a></p>
+    <h1>Resume Examples</h1>
+    <h2><a href="basic.html">Basic Resume</a></h2>
+    <h2><a href="advanced.html">Advanced Resume</a></h2>
   </body>
 </html>
