--- a/advanced.html
+++ b/advanced.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<div id="container">
-			<img src="Scott.png" id="pic">
+			<img src="ScottPhoto.png" id="pic">
 			<div id="content-contact">
 				Scott Bromander
 			</div>
