--- a/advanced.html
+++ b/advanced.html
@@ -36,9 +36,22 @@
 					</div>
 
           <div id="content-prime">
+            <h3>Grand Canyon University</h3>
+            <div class="block-date">
+                <div class="date">October 2017 - Current</div>
+                <h4>Head of Education, Non-Degree Technology Programs</h4>
+            </div>
+            <div class"block-content">
+                <ul>
+                  <li>Update in progress!</li>
+                </ul>
+            </div>
+          </div>
+
+          <div id="content-prime">
             <h3>Prime Academy</h3>
             <div class="block-date">
-                <div class="date">August 2011 - Current</div>
+                <div class="date">October 2014 - October 2017</div>
                 <h4>Principal Director of Programs</h4>
                 <h6>(previously Senior Director of Instruction, Director of Instruction and Instructor)</h6>
             </div>
@@ -60,7 +73,7 @@
 					<div id="content-nerdery">
 						<h3>The Nerdery</h3>
 						<div class="block-date">
-								<div class="date">August 2011 - Current</div>
+								<div class="date">August 2011 - October 2014</div>
 								<h4>Interactive Developer</h4>
 
 						</div>
@@ -78,7 +91,7 @@
 					<div id="content-sanford">
 						<h3>Sanford Brown</h3>
 						<div class="block-date">
-								<div class="date">February 2010 - Current</div>
+								<div class="date">February 2010 - February 2015</div>
 								<h4>Adjunct Instructor</h4>
 						</div>
 						<div class"block-content">
