--- a/basic.html
+++ b/basic.html
@@ -44,7 +44,7 @@
           <div class="block-date">
               <h4>October 2014 - October 2017</h4>
               <h4>Principal Director of Programs</h4>
-              <h6>(previously Senior Director of Instruction, Director of Instruction and Instructor)</h6>
+              <p><i>(previously Senior Director of Instruction, Director of Instruction and Instructor)<i></p>
           </div>
           <div class"block-content">
               <ul>
